dashboard: "SAVE AS INIT"

--- a/shell-dashboard/index.html
+++ b/shell-dashboard/index.html
@@ -445,6 +445,9 @@
                                 <button @click="applyEdits">APPLY EDITS</button>
                                 <button @click="discardEdits">DISCARD EDITS</button>
                             </div>
+                            <div v-if="pendingEditsCount === 0" style="margin-top: var(--unit-space);">
+                                <button @click="saveAsInit">SAVE AS INIT</button>
+                            </div>
                         </div>
                     </div>
                 </div>
