dashboard: Add home button

--- a/shell-dashboard/index.html
+++ b/shell-dashboard/index.html
@@ -317,7 +317,7 @@
                                 <td><button class="jog-btn" @click="jogYPlus">Y+</button></td>
                                 <td></td>
                                 <td><button class="jog-btn" @click="jogYMinus">Y-</button></td>
-                                <td></td>
+                                <td><button class="jog-btn" @click="jogHome">HOME</button></td>
                                 <td><button class="jog-btn" @click="jogZPlus">↓ Z+</button></td>
                             </tr>
                             <tr>
