--- a/shell-dashboard/index.html
+++ b/shell-dashboard/index.html
@@ -301,6 +301,16 @@
                     </div>
                 </div>
 
+                <div class="widget">
+                    <h1>Coordinate System</h1>
+                    <div class="widget-content">
+                        <button @click="setMachineCoords">MACHINE</button>
+                        <button @click="setWorkCoords">WORK</button>
+                        <button @click="setGrinderCoords">GRINDER</button>
+                        <button @click="setToolSupplyCoords">TOOLSUPPLY</button>
+                    </div>
+                </div>
+
                 <div class="widget" id="widget-jog">
                     <h1>Jog</h1>
                     <div class="widget-content">
