--- a/shell-dashboard/index.html
+++ b/shell-dashboard/index.html
@@ -314,7 +314,9 @@
                 <div class="widget" id="widget-jog">
                     <h1>Jog</h1>
                     <div class="widget-content">
-                        <div>Position: {{ JSON.stringify(statusData) }}</div><br />
+                        <div>{{ posLineLocal }}</div>
+                        <div>{{ posLineMachine }}</div>
+                        <br />
                         <table class="jog-table">
                             <tr>
                                 <td></td>
