Support multiple keys

--- a/shell-dashboard/index.html
+++ b/shell-dashboard/index.html
@@ -298,6 +298,9 @@
                         <label class="">
                             <input type="checkbox" v-model="clearOnExec"> Clear on exec
                         </label>
+                        <label class="">
+                            <input type="checkbox" v-model="asJob"> As Job
+                        </label>
                     </div>
                 </div>
 
