--- a/shell-dashboard/index.html
+++ b/shell-dashboard/index.html
@@ -162,10 +162,6 @@
             font-size: 16px;
         }
 
-        #widget-discharge canvas {
-            background: var(--bg-secondary);
-            border: 1px solid var(--border-color);
-        }
 
         #widget-jog .jog-table {
             border-spacing: calc(var(--unit-space) * 0.5);
@@ -275,7 +271,6 @@
                 <div class="status-info">
                     <span :title="'Detailed status: ' + clientStatus">{{ statusEmoji }} {{ uiStatus }}</span>
                     <span>{{ queueStatus }}</span>
-                    <span v-if="rebootStatus">{{ rebootStatus }}</span>
                 </div>
             </div>
         </header>
@@ -294,7 +289,6 @@
                         <button class="" @click="send" :disabled="commands.length === 0 || !assumeInitialized">{{
                             executeButtonText }}</button>
                         <button class="" @click="cancel">CANCEL</button>
-                        <button class="" @click="analyzeLog">ANALYZE LOG</button>
                         <label class="">
                             <input type="checkbox" v-model="clearOnExec"> Clear on exec
                         </label>
@@ -399,7 +393,7 @@
                     </div>
                 </div>
 
-                 <div class="widget" id="widget-joblist">
+                <div class="widget" id="widget-joblist">
                     <h1>Job List</h1>
                     <div class="widget-content">
                         <button @click="refreshJobs">REFRESH</button>
@@ -409,39 +403,33 @@
                         <table v-else style="width: 100%; border-collapse: collapse; margin-top: var(--unit-space);">
                             <thead>
                                 <tr>
-                                    <th style="text-align: left; padding: calc(var(--unit-space) * 0.5); border-bottom: 1px solid var(--border-color);">Status</th>
-                                    <th style="text-align: left; padding: calc(var(--unit-space) * 0.5); border-bottom: 1px solid var(--border-color);">Started</th>
-                                    <th style="text-align: left; padding: calc(var(--unit-space) * 0.5); border-bottom: 1px solid var(--border-color);">Elapsed</th>
+                                    <th
+                                        style="text-align: left; padding: calc(var(--unit-space) * 0.5); border-bottom: 1px solid var(--border-color);">
+                                        Status</th>
+                                    <th
+                                        style="text-align: left; padding: calc(var(--unit-space) * 0.5); border-bottom: 1px solid var(--border-color);">
+                                        Started</th>
+                                    <th
+                                        style="text-align: left; padding: calc(var(--unit-space) * 0.5); border-bottom: 1px solid var(--border-color);">
+                                        Elapsed</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr v-for="job in jobs" :key="job.job_id">
-                                    <td style="padding: calc(var(--unit-space) * 0.5); border-bottom: 1px solid var(--border-color);">{{ job.status }}</td>
-                                    <td style="padding: calc(var(--unit-space) * 0.5); border-bottom: 1px solid var(--border-color);">{{ formatJobTime(job.time_added) }}</td>
-                                    <td style="padding: calc(var(--unit-space) * 0.5); border-bottom: 1px solid var(--border-color);">{{ getElapsedTime(job) }}</td>
+                                    <td
+                                        style="padding: calc(var(--unit-space) * 0.5); border-bottom: 1px solid var(--border-color);">
+                                        {{ job.status }}</td>
+                                    <td
+                                        style="padding: calc(var(--unit-space) * 0.5); border-bottom: 1px solid var(--border-color);">
+                                        {{ formatJobTime(job.time_added) }}</td>
+                                    <td
+                                        style="padding: calc(var(--unit-space) * 0.5); border-bottom: 1px solid var(--border-color);">
+                                        {{ getElapsedTime(job) }}</td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
-
-                <div class="widget">
-                    <h1>Recent G1</h1>
-                    <div class="widget-content">
-                        <div v-if="g1Commands.length === 0">
-                            No G1 commands
-                        </div>
-                        <div v-else>
-                            <div v-for="g1 in g1Commands" :key="g1.startLineNum">
-                                {{ g1.startTime.split(' ')[1] }} ~
-                                {{ g1.duration }}s
-                                <span v-if="!g1.endTime">(executing)</span>
-                                {{ g1.command }}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
 
             <div class="column">
@@ -512,13 +500,16 @@
                         <div>
                             Auto refresh
                             <label class="">
-                                <input type="radio" name="tsRefreshInterval" :value="0" v-model.number="tsRefreshInterval"> No
+                                <input type="radio" name="tsRefreshInterval" :value="0"
+                                    v-model.number="tsRefreshInterval"> No
                             </label>
                             <label class="">
-                                <input type="radio" name="tsRefreshInterval" :value="10" v-model.number="tsRefreshInterval"> 10s
+                                <input type="radio" name="tsRefreshInterval" :value="10"
+                                    v-model.number="tsRefreshInterval"> 10s
                             </label>
                             <label class="">
-                                <input type="radio" name="tsRefreshInterval" :value="60" v-model.number="tsRefreshInterval"> 1m
+                                <input type="radio" name="tsRefreshInterval" :value="60"
+                                    v-model.number="tsRefreshInterval"> 1m
                             </label>
                             <button @click="tsRefreshNow">REFRESH</button>
                         </div>
@@ -526,13 +517,6 @@
                     </div>
                 </div>
 
-                <div class="widget" id="widget-discharge">
-                    <h1>Discharge</h1>
-                    <div class="widget-content">
-                        250ms/line
-                        <canvas ref="edml" width="500" height="1000"></canvas>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
