sim-machine: start migration to TS

--- a/sim-machine/index.html
+++ b/sim-machine/index.html
@@ -22,12 +22,12 @@
     <script type="importmap">
 		{
 			"imports": {
-				"three": "./three.module.min.js",
-				"three/addons/": "./three-addons/"
+				"three": "./vendor/three/three.module.min.js",
+				"three/addons/": "./vendor/three/addons/"
 			}
 		}
 	</script>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 
 </html>
